# sam

./: .gitignore  README.md  docker-compose.yml  install.sh  pyproject.toml
.devcontainer/: devcontainer.json  packages.txt
.github/workflow/: build_requirements.yml
.github/workflows/: build_requirements.yml  deploy-web.yml  export_apps_list.yml  hourly_streamlit_wakeup.yml
.streamlit/: config.toml
apps/: apps_list.json  requirements.txt  startapp.sh
apps/digipin-pro/: main.py  metadata.json  requirements.txt
apps/home/: main.py  metadata.json
apps/mobile_number_tracker/: .env.example  main.py  metadata.json  requirements.txt
apps/test/: metadata.json
scripts/: export_apps_list.py  merge_requirements.sh  streamlit_wakeup.py
src/: constants.py  helpers.py  pyproject.toml  requirements.txt  streamlit_app.py  utils.py
src/app/: main.py
src/apps/test/: metadata.json
src/apps/test/src/: app.py
web/: Dockerfile  env.d.ts  package-lock.json  package.json  wrangler.jsonc  wrangler.toml
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/hello/: route.ts
web/src/app/app/: layout.tsx
web/src/app/app/[id]/: page.tsx
web/src/components/: AppCard.tsx  AppListing.tsx
web/src/lib/: types.ts
web/src/services/: appService.ts
