[project]
name = "i-love-my-streamlit"
version = "0.1.0"
description = ""
authors = [
    { name = "Subhomoy Roy Choudhury", email = "subhomoyrchoudhury@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["streamlit (>=1.48.0,<2.0.0)"]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
